# GilmorsAlgorithm

./: 1.hs  CMakeLists.txt  README.md  main.cpp
inc/: ar_std.h  atomformula.h  binaryformula.h  domain.h  formula.h  interpretation.h  notformula.h  pom.h  quantifierformula.h  term.h  torf.h
src/: ar_std.cpp  atomformula.cpp  notformula.cpp  pom.cpp  term.cpp  torf.cpp
